<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Library</string>
    <string name="action_settings">Settings</string>
    <string name="user_borrowing">Borrowing</string>
    <string name="user_borrowed">Borrowed</string>
    <string name="user_wanted">Wanted</string>
    <string name="user_donated">Donated</string>
    <string name="book_reading">reading</string>
    <string name="book_read">read</string>
    <string name="book_wish">wish</string>
    <string name="book_reading_full">I\'m reading this book.</string>
    <string name="book_read_full">I\'ve read this book.</string>
    <string name="book_wish_full">I want to read this book.</string>
    
    <string name="user_center">User Center</string>
    <string name="book_library">Book Library</string>
    <string name="library_technical">Technical</string>
    <string name="library_self">Self Entertainment</string>
    <string name="library_english">English</string>
    <string name="library_misc">Misc</string>
    <string name="action_search">Search</string>
    <string name="book_info">Book</string>
    <string name="book_detail">Book Detail</string>
    <string name="book_summary">Book Summary</string>
    <string name="author_intro">Author Intro</string>
    <string name="book_reviews">Book Reviews</string>
    <string name="load_failed">Load failed!</string>
    <string name="no_network_connection_toast">No network connection</string>
    <string name="plus_one">+1</string>
    <string name="book_from">From: </string>
    
    <string name="book_new_arrival">New Arrival</string>
    <string name="book_hotest">The Hotest</string>
    <string name="book_category">Browse by category</string>

</resources>