<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1.0"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/header_book"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/book_list_even_item_normal_bg_color"
            android:paddingBottom="@dimen/content_padding_normal"
            android:paddingLeft="@dimen/content_padding_normal"
            android:paddingRight="@dimen/content_padding_normal"
            android:paddingTop="@dimen/content_padding_normal" >

            <ImageView
                android:id="@+id/book_img"
                android:layout_width="@dimen/detail_image_width"
                android:layout_height="@dimen/detail_image_height"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/book_title"
                style="@style/TextHeader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/book_img"
                android:layout_marginLeft="12dip"
                android:layout_toRightOf="@id/book_img"
                android:gravity="top" />

            <TextView
                android:id="@+id/book_author"
                style="@style/TextHeaderSub"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/book_title"
                android:layout_below="@id/book_title" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/book_img"
                android:layout_alignLeft="@id/book_title"
                layout="@layout/book_footnote" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/book_status_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:layout_marginLeft="@dimen/content_padding_normal"
            android:layout_marginRight="@dimen/content_padding_normal"
            android:layout_marginTop="@dimen/element_spacing_normal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/book_status_reading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book_reading" />

            <Button
                android:id="@+id/book_status_wish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book_wish" />

            <Button
                android:id="@+id/book_status_read"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book_read" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/book_status_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:layout_marginLeft="@dimen/content_padding_normal"
            android:layout_marginRight="@dimen/content_padding_normal"
            android:layout_marginTop="@dimen/element_spacing_normal"
            android:orientation="horizontal"
            android:visibility="gone" >

            <Button
                android:id="@+id/book_status_now"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book_reading" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/book_summary_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:layout_marginLeft="@dimen/content_padding_normal"
            android:layout_marginRight="@dimen/content_padding_normal"
            android:layout_marginTop="@dimen/element_spacing_normal"
            android:orientation="vertical" >

            <TextView
                style="@style/TextHeader2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_summary" />

            <TextView
                android:id="@+id/book_summary"
                style="@style/TextBody"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/author_intro_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:layout_marginLeft="@dimen/content_padding_normal"
            android:layout_marginRight="@dimen/content_padding_normal"
            android:layout_marginTop="@dimen/element_spacing_normal"
            android:orientation="vertical" >

            <TextView
                style="@style/TextHeader2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_intro" />

            <TextView
                android:id="@+id/author_intro"
                style="@style/TextBody"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/book_reviews_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:layout_marginLeft="@dimen/content_padding_normal"
            android:layout_marginRight="@dimen/content_padding_normal"
            android:layout_marginTop="@dimen/element_spacing_normal"
            android:orientation="vertical" >

            <TextView
                style="@style/TextHeader2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_reviews" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>